updating full details

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>Wisconsin</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Live Music, Being outside and talking with friends and family.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Providing innovative solutions to worldwide brands.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Colorado Springs</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Understanding the in's and outs of how things are created is a knack of mine. Building solutions is the way of today. </p>
     </section>
 
     <footer id="footer">
